--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ ul{
     height: 30px;
     width: 100%;
 }
-.down{
+.up{
     transform: rotateX(180deg);
 }
 
@@ -68,6 +68,10 @@ ul{
     text-shadow: 0 1px 0 black;
 }
 form{
+    text-align: center;
+}
+legend{
+    width: 100%;
     text-align: center;
 }
 .instructions{
@@ -89,6 +93,7 @@ label{
     border:0.1em solid white;
     background-color: rgb(255, 255, 255,0.6);
     font-family: 'Lato', sans-serif;
+    font-size:inherit;
     padding: 7px 10px;
 }
 #country::placeholder{
@@ -97,6 +102,7 @@ label{
 .submit-btn{
     display:inline-block;
     padding:0.35em 1.2em;
+    font-size: inherit;
     border:0.1em solid white;
     margin:0 0.3em 0.3em 0;
     border-radius:0.12em;
@@ -112,8 +118,10 @@ label{
     animation: backgroundChange 1s linear infinite alternate;
 }
 
-
-/* weather */
+/*general*/
+.general-info{
+    list-style-position: inside;
+}
 .flag{
     width: 100%;
     max-width: 200px;
@@ -126,6 +134,8 @@ label{
     text-align: center;
     width: calc(100% + 40px);
 }
+
+/* weather */
 .weather-info{
     list-style: none;
     display: flex;
@@ -177,7 +187,7 @@ label{
 }
 .back-txt{
     text-decoration: none;
-    color: rgb(255, 255, 255,0.75);
+    color: rgba(255, 255, 255,0.75);
     font-size: 1.2em;
 }
 .back-txt:hover{
@@ -213,7 +223,6 @@ footer a{
 }
 footer a:hover{
     animation: colorChange 0.5s linear infinite alternate;
-
 }
 .author{
     font-weight: 700;
@@ -249,6 +258,7 @@ footer a:hover{
         padding: 15px 10px;
     }
 }
+
 @media only screen and (min-width: 800px){
     .instructions{
         margin: 15% auto 8%;
@@ -279,7 +289,6 @@ footer a:hover{
         margin-left: 0;
         width: 95%;
     }
-
 }
 
 .hidden{
