--- a/index.css
+++ b/index.css
@@ -14,6 +14,12 @@ h2{
 ul{ 
     margin: 0;
 }
+fieldset{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
 
 /* group stylings */
 .section{
