--- a/index.css
+++ b/index.css
@@ -71,21 +71,17 @@ form{
     text-align: center;
 }
 fieldset{
-    width: 100%;
-    margin: 0;
+    margin: 30% auto 10%;
+    width: 90%;
     padding: 0;
     border: none;
 }
-legend{
+.instructions{
     width: 100%;
     text-align: center;
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: 10%;
-}
-fieldset{
-    margin: 30% auto 10%;
-    width: 90%;
 }
 label{
     width: 70%;
